# solana-stablecoin-standard

./: .gitignore  Anchor.toml  Cargo.toml  README.md  docker-compose.yml  package.json
audits/: FINAL_AUDIT.md  SECURITY_AUDIT_1.md  SECURITY_AUDIT_2.md  SECURITY_AUDIT_3.md  SECURITY_AUDIT_4.md  SECURITY_AUDIT_5.md  (+1 more)
programs/sss-1/: Cargo.toml
programs/sss-1/src/: constants.rs  enums.rs  error.rs  events.rs  lib.rs
programs/sss-1/src/instructions/: blacklist.rs  burn.rs  freeze.rs  initialize_stablecoin.rs  mint.rs  mod.rs  pause.rs  seize.rs  transfer_authority.rs  update_minter.rs  update_roles.rs  update_supply_cap.rs
programs/sss-1/src/state/: blacklist_entry.rs  minter_info.rs  mod.rs  role.rs  stablecoin.rs  supply_cap.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: lib.rs
trident-tests/: Cargo.toml  README.md  Trident.toml
trident-tests/.fuzz-artifacts/: fuzzing_metrics_fuzz_0-2026-02-25_12-31-11.json  fuzzing_metrics_fuzz_0-2026-02-25_12-34-18.json  fuzzing_metrics_fuzz_0-2026-02-25_12-38-59.json  fuzzing_metrics_fuzz_0-2026-02-25_12-42-34.json  fuzzing_metrics_fuzz_0-2026-02-25_12-47-06.json  fuzzing_metrics_fuzz_0-2026-02-25_13-06-09.json  fuzzing_metrics_fuzz_0-2026-02-25_13-10-59.json  fuzzing_metrics_fuzz_0-2026-02-28_15-54-26.json  fuzzing_metrics_fuzz_0-2026-02-28_15-54-41.json  fuzzing_metrics_fuzz_0-2026-02-28_16-41-14.json  fuzzing_metrics_fuzz_0-2026-02-28_16-45-13.json  fuzzing_metrics_fuzz_0-2026-03-01_00-14-25.json  fuzzing_metrics_fuzz_0-2026-03-01_08-35-09.json  fuzzing_metrics_fuzz_0.json  fuzzing_metrics_fuzz_1-2026-03-01_08-35-22.json  fuzzing_metrics_fuzz_1.json  regression_fuzz_0-2026-02-28_15-54-41.json
trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
trident-tests/fuzz_1/: fuzz_accounts.rs  test_fuzz.rs  types.rs
trident-tests/trident-fuzz/: .cargo_vcs_info.json  Cargo.toml
trident-tests/trident-fuzz/src/trident/: client.rs  flow_executor.rs  mod.rs
(+79 files in other folders)
