[workspace]
resolver = "1"

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
borsh = "1.5.3"
spl-associated-token-account-interface = "1"
spl-token-2022-interface = "1"

[dependencies.trident-fuzz]
path = "trident-fuzz"
features = ["token"]

[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[[bin]]
name = "fuzz_1"
path = "fuzz_1/test_fuzz.rs"
