[package]
name = "sss-1"
version = "0.1.0"
description = "Solana Stablecoin Standard - configurable on-chain program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_1"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = {version = "0.31.1", features = ["token", "associated_token", "metadata"]}
spl-token-2022 = { version = "6.0.0", default-features = false, features = ["no-entrypoint"]}
