[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "Solana Stablecoin Standard — transfer hook program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = {version = "0.31.1", features = ["token", "associated_token", "metadata"]}
spl-transfer-hook-interface = "0.10"
spl-tlv-account-resolution = "0.10"
spl-type-length-value = "0.8"
spl-pod = "0.5"
spl-discriminator = "0.4"
